# CAD_development

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/geometry/: Point3D.cpp  Point3D.h  Vector3.cpp  Vector3.h
src/core/modeling/: BRepBuilder.cpp  BRepBuilder.h  Shape.cpp  Shape.h
src/viewer/: AISViewer.cpp  AISViewer.h
